--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:gravity="center_vertical"
             android:lineSpacingExtra="14sp"
-            android:text="SeeMeet 시작하기"
+            android:text="@string/startSeeMeet"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -83,7 +83,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="TextView"
             android:textColor="@color/red"
             android:textSize="12sp"
             android:visibility="invisible"
@@ -136,7 +135,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="TextView"
             android:textColor="@color/red"
             android:textSize="12sp"
             android:visibility="invisible"
@@ -188,7 +186,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="TextView"
             android:textColor="@color/red"
             android:textSize="12sp"
             android:visibility="invisible"
@@ -214,7 +211,7 @@
             android:clickable="false"
             android:enabled="false"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
-            android:text="다음으로"
+            android:text="@string/register_next"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/et_pw"
