--- a/app/src/main/res/layout/activity_register_name_id_activity.xml
+++ b/app/src/main/res/layout/activity_register_name_id_activity.xml
@@ -28,7 +28,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
             android:gravity="center_vertical"
             android:lineSpacingExtra="14sp"
-            android:text="SeeMeet 시작하기"
+            android:text="@string/startSeeMeet"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="SeeMeet에서 사용할\n이름과 아이디를\n입력해주세요"
+            android:text="@string/register_text"
             android:textAlignment="center"
             android:textColor="@color/gray05"
             android:textSize="16sp"
@@ -84,7 +84,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/selector_apply_search"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:hint="친구에게 보여질 이름을 써주세요"
+            android:hint="@string/register_hint_name"
             android:inputType="textPersonName"
             android:paddingStart="12dp"
             android:textColor="@color/gray06"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="아이디"
+            android:text="@string/register_id"
             android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_name"
@@ -112,7 +112,7 @@
             android:layout_marginTop="12dp"
             android:background="@drawable/selector_apply_search"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:hint="친구를 검색하는데에 쓰여요"
+            android:hint="@string/register_hint_id"
             android:inputType="textPersonName"
             android:maxLength="16"
             android:paddingStart="12dp"
@@ -128,7 +128,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="TextView"
             android:textColor="@color/red"
             android:textSize="12sp"
             android:visibility="invisible"
@@ -144,7 +143,7 @@
             android:clickable="false"
             android:enabled="false"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:text="시작하기"
+            android:text="@string/register_start"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/et_id"
