[FEAT] 받는 사람 포커스 나가면 입력하던 텍스트 지우기

--- a/app/src/main/res/layout/dialog_apply_back.xml
+++ b/app/src/main/res/layout/dialog_apply_back.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout5"
+                android:id="@+id/cl_back_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
