--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -188,6 +188,18 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:id="@+id/cl_error_network"
+                    android:visibility="visible"
+                    app:layout_constraintTop_toBottomOf="@id/tv_home_reminder"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <include layout="@layout/view_error_network"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_home_reminder"
                     android:layout_width="match_parent"
@@ -202,7 +214,6 @@
                     android:paddingHorizontal="20dp"
                     android:clipToPadding="false"
                     android:orientation="horizontal"/>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
