[CHORE] 약속삭제 관련 ui 수정

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -204,12 +204,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="28dp"
                 android:background="@drawable/rectangle_gray04_10"
                 android:fontFamily="@font/spoqa_han_sans_neo_medium"
                 android:text="@string/detail_delete"
                 android:textColor="@color/white"
                 android:textSize="16sp"
-                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider5" />
