[REFACTOR] email, pw null인지, 이메일 형식 확인해서 버튼 활성화 여부

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="org.seemeet.seemeet.ui.viewmodel.LoginViewModel" />
@@ -113,6 +114,8 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_login"
+                isPossibleEmail="@{viewModel.loginEmail}"
+                isPossiblePw="@{viewModel.loginPw}"
                 android:layout_width="0dp"
                 android:layout_height="54dp"
                 android:layout_marginTop="26dp"
